@@ -70,6 +70,18 @@
 			<key>DefaultValue</key>
 			<false/>
 		</dict>
+		<dict>
+			<key>DefaultValue</key>
+			<string>1</string>
+			<key>KeyboardType</key>
+			<string>NumberPad</string>
+			<key>Type</key>
+			<string>PSTextFieldSpecifier</string>
+			<key>Title</key>
+			<string># de jours dûe bientôt</string>
+			<key>Key</key>
+			<string>soondays</string>
+		</dict>
 	</array>
 </dict>
 </plist>
